# llm-plug

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  REVIEW1.md  admin_auth.py  capability_manager.py  client.py  config.py  kill_port.sh  logging_config.py  main.py  opencode.json  opencode.json.mimo-baidu  proxy_core.py  pyproject.toml  request_logs.py  response_state.py  responses_handler.py  serve_viewer.py  start.sh  state_store.py  stats.py  stats_pg.py  storage.py  test_jsonb_debug.py  think_filter.py  url_builder.py  whitelist.py
balancer/: AGENTS.md  load_balancer.py
converters/: AGENTS.md  base.py  to_anthropic.py  to_chat.py  to_response.py  usage.py
docker-deploy/: Dockerfile  build.sh  docker-build.sh  docker-compose.yml
docs/: STRUCT.md  architecture.md  deployment.md  getting-started.md  modules.md  spec-balancer.md  spec-client.md  spec-config.md  spec-converters.md  spec-models.md  spec-proxy-core.md  spec-routers.md  spec-storage.md  troubleshooting.md
models/: AGENTS.md  api_key.py  api_types.py  channel.py  model_group.py
proxy/: __init__.py  channel_registry.py  conversion.py  core.py  errors.py  media.py  non_stream_executor.py  routing.py  stream_executor.py  stream_reconstruct.py  stream_sse.py
routers/: AGENTS.md  admin.py  auth.py  proxy_anthropic.py  proxy_base.py  proxy_chat.py  proxy_errors.py  proxy_models.py  proxy_response.py
static/: AGENTS.md  admin-login.html  index.html  json-viewer.html  request-analyzer.html  session-viewer.html  stream-test.html
tests/: admin_auth_utils.py  (+50 more)
(+110 files in other folders)
