[project]
name = "llm-plug"
version = "0.1.0"
description = "LLM API 转换器 — 支持 OpenAI Chat Completions、OpenAI Response 和 Anthropic 格式互转，带负载均衡与故障转移"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.13.3",
    "python-socks[asyncio]>=2.8.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
