[project]
name = "llm-plug"
version = "0.1.0"
description = "LLM API 转换器 — 支持 OpenAI Chat Completions、OpenAI Response 和 Anthropic 格式互转，带负载均衡与故障转移"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.136.0",
    "httptools>=0.7.1",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.13.3",
    "python-socks[asyncio]>=2.8.1",
    "uvicorn>=0.46.0",
    "loguru>=0.7.3",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
